Closed Bug 1046930 Opened 10 years ago Closed 10 years ago

Intermittent test_SVGTransformListAddition.xhtml | application crashed [@ nsTArray_Impl<mozilla::MediaCache::Block, nsTArrayInfallibleAllocator>::ElementAt(unsigned int) + 0x1e] after "Assertion failure: aIndex < Length() (invalid array index)"

Categories

(Core :: Audio/Video, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34
Tracking Status
firefox32 --- unaffected
firefox33 --- unaffected
firefox34 --- fixed
firefox-esr24 --- unaffected
firefox-esr31 --- unaffected

People

(Reporter: RyanVM, Assigned: padenot)

Details

(Keywords: assertion, crash, intermittent-failure)

Attachments

(1 file)

https://tbpl.mozilla.org/php/getParsedLog.php?id=44981066&tree=Fx-Team

Android 4.0 Panda fx-team debug test mochitest-3 on 2014-07-31 09:26:27 PDT for push 482533cb9495
slave: panda-0897

10:02:38     INFO -  566 INFO TEST-START | /tests/content/svg/content/test/test_SVGStringList.xhtml
10:02:38     INFO -  567 INFO TEST-UNEXPECTED-ERROR | /tests/content/svg/content/test/test_SVGStringList.xhtml | This test left crash dumps behind, but we weren't expecting it to!
10:02:38     INFO -  TEST-INFO expected OK | took 1338ms
10:02:38     INFO -  568 INFO TEST-START | /tests/content/svg/content/test/test_SVGStyleElement.xhtml
10:02:38     INFO -  569 INFO TEST-OK | /tests/content/svg/content/test/test_SVGStyleElement.xhtml | took 441ms
10:02:38     INFO -  570 INFO TEST-START | /tests/content/svg/content/test/test_SVGTransformList.xhtml
10:02:38     INFO -  571 INFO TEST-OK | /tests/content/svg/content/test/test_SVGTransformList.xhtml | took 837ms
10:02:38     INFO -  572 INFO TEST-START | /tests/content/svg/content/test/test_SVGTransformListAddition.xhtml
10:02:38     INFO -  INFO | automation.py | Application ran for: 0:25:07.631717
10:02:38     INFO -  INFO | zombiecheck | Reading PID log: /tmp/tmp6Z1N7jpidlog
10:02:38     INFO -  Contents of /data/anr/traces.txt:
10:02:40     INFO -  mozcrash INFO | Downloading symbols from: https://ftp-ssl.mozilla.org/pub/mozilla.org/mobile/tinderbox-builds/fx-team-android-debug/1406821807/fennec-34.0a1.en-US.android-arm.crashreporter-symbols.zip
10:02:45  WARNING -  PROCESS-CRASH | /tests/content/svg/content/test/test_SVGTransformListAddition.xhtml | application crashed [@ nsTArray_Impl<mozilla::MediaCache::Block, nsTArrayInfallibleAllocator>::ElementAt(unsigned int) + 0x1e]
10:02:45     INFO -  Crash dump filename: /tmp/tmpOJL0Xt/1e493bb4-71cd-6b0c-2944c28a-2f96db0d.dmp
10:02:45     INFO -  Operating system: Android
10:02:45     INFO -                    0.0.0 Linux 3.2.0+ #2 SMP PREEMPT Thu Nov 29 08:06:57 EST 2012 armv7l pandaboard/pandaboard/pandaboard:4.0.4/IMM76I/5:eng/test-keys
10:02:45     INFO -  CPU: arm
10:02:45     INFO -       2 CPUs
10:02:45     INFO -  Crash reason:  SIGSEGV
10:02:45     INFO -  Crash address: 0x0
10:02:45     INFO -  Thread 55 (crashed)
10:02:45     INFO -   0  libxul.so!nsTArray_Impl<mozilla::MediaCache::Block, nsTArrayInfallibleAllocator>::ElementAt(unsigned int) + 0x1e
10:02:45     INFO -       r4 = 0x6b6b3860    r5 = 0x00000000    r6 = 0x00000001    r7 = 0x6b6b3880
10:02:45     INFO -       r8 = 0x00000000    r9 = 0x6b6b3880   r10 = 0x0000000a    fp = 0x6b6b38bc
10:02:45     INFO -       sp = 0x6f8deca8    lr = 0x62b38767    pc = 0x62b40fa2
10:02:45     INFO -      Found by: given as instruction pointer in context
10:02:45     INFO -   1  libxul.so!mozilla::MediaStreamGraphImpl::UpdateStreamOrder() [nsTArray.h:482533cb9495 : 890 + 0x7]
10:02:45     INFO -       r4 = 0x6b6b3860    r5 = 0x00000000    r6 = 0x00000001    r7 = 0x6b6b3880
10:02:45     INFO -       r8 = 0x00000000    r9 = 0x6b6b3880   r10 = 0x0000000a    fp = 0x6b6b38bc
10:02:45     INFO -       sp = 0x6f8decb0    pc = 0x62b48f97
10:02:45     INFO -      Found by: call frame info
10:02:45     INFO -   2  libxul.so!mozilla::MediaStreamGraphImpl::RunThread() [MediaStreamGraph.cpp:482533cb9495 : 1391 + 0x5]
10:02:45     INFO -       r4 = 0x00000001    r5 = 0x00000003    r6 = 0x6b218328    r7 = 0x6b218330
10:02:45     INFO -       r8 = 0x6b6b3860    r9 = 0x6f8ded88   r10 = 0x0000000a    fp = 0x6b6b38bc
10:02:45     INFO -       sp = 0x6f8decf8    pc = 0x62b5900d
10:02:45     INFO -      Found by: call frame info
10:02:45     INFO -   3  libxul.so!mozilla::::MediaStreamGraphThreadRunnable::Run [MediaStreamGraph.cpp:482533cb9495 : 1619 + 0x5]
10:02:45     INFO -       r4 = 0x6664b800    r5 = 0x6f8dede8    r6 = 0x6f8dedf4    r7 = 0x00000001
10:02:45     INFO -       r8 = 0x00000001    r9 = 0x6f8dee2f   r10 = 0x00000000    fp = 0x6664b83c
10:02:45     INFO -       sp = 0x6f8dedd0    pc = 0x62b59529
10:02:45     INFO -      Found by: call frame info
10:02:45     INFO -   4  libxul.so!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:482533cb9495 : 766 + 0xb]
10:02:45     INFO -       r4 = 0x6664b800    r5 = 0x6f8dede8    r6 = 0x6f8dedf4    r7 = 0x00000001
10:02:45     INFO -       r8 = 0x00000001    r9 = 0x6f8dee2f   r10 = 0x00000000    fp = 0x6664b83c
10:02:45     INFO -       sp = 0x6f8dedd8    pc = 0x61fcf8f9
10:02:45     INFO -      Found by: call frame info
10:02:45     INFO -   5  libxul.so!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:482533cb9495 : 265 + 0xd]
10:02:45     INFO -       r4 = 0x6664b800    r5 = 0x00000001    r6 = 0x5be824a0    r7 = 0x6d572f50
10:02:45     INFO -       r8 = 0x00000000    r9 = 0x00000000   r10 = 0x6664b810    fp = 0x00000001
10:02:45     INFO -       sp = 0x6f8dee28    pc = 0x61fe366d
10:02:45     INFO -      Found by: call frame info

10:02:49     INFO -  07-31 10:02:19.039 F/MOZ_Assert( 2239): Assertion failure: aIndex < Length() (invalid array index), at ../../dist/include/nsTArray.h:855
10:02:49     INFO -  07-31 10:02:19.953 W/AudioTrack( 2239): obtainBuffer() track 0x1da86b0 disabled, restarting
hrm, this is embarassing.
Attachment #8466198 - Flags: review?(rjesup)
Assignee: nobody → paul
Status: NEW → ASSIGNED
Attachment #8466198 - Flags: review?(rjesup) → review+
Thanks for the push Randell.
Flags: needinfo?(paul)
https://hg.mozilla.org/mozilla-central/rev/b31446268b2f
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
QA Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: