Bug 1046930 - Fix loop index when sending the status of the microphone to the AudioStream. r=jesup